fix gap between bubble header/footer and content; refs #12397
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathSiteCommon/trunk@53773 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/AllSites.css
+++ b/Site/htdocs/assets/css/AllSites.css
@@ -98,6 +98,10 @@ table.threecolumn td {
 	line-height: 1.1em;
 }
 
+.bubble-header {
+  margin-bottom: -4px;
+}
+
 #infobottom {
 	width: 209px;
 	min-height: 35px;    /* trying to keep buckest same size */
@@ -109,6 +113,7 @@ table.threecolumn td {
 	padding-right: 19px;
 	padding-bottom: 0px; 
 	padding-left: 19px;
+  margin-top: -4px;
 }
 
 
